# breathe-esg

./: DECISIONS.md  MODEL.md  README.md  SOURCES.md  TRADEOFFS.md
backend/: main.py  models.py  pyproject.toml  requirements.txt
backend/routes/: file_routes.py
backend/services/: SAP_service.py  Travel_service.py  Utility_Service.py
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: ApprovedRecords.jsx  PendingRecords.jsx  RecordsDashboard.jsx  RejectedRecords.jsx  UploadFile.jsx
