[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.5.1",
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-core>=2.46.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
